--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,16 +16,19 @@ body {
   flex-direction: column;
   justify-content: space-between;
   gap: 24px;
+  position: relative;
+  background: linear-gradient(0.25turn, #015376, #2d2d2d, #7b0101); 
 }
 
 .header {
   display: flex;
   flex-direction: column;
+  position: relative;
+  color: white;
 }
 
 .topBar  {
   display: flex;
-  width: 100vw;
   justify-content: space-between;
   align-items: center;
 }
@@ -38,6 +41,7 @@ body {
 .logo-image {
   height: 75px;
   width: auto;
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
 }
 
 .signup {
@@ -46,24 +50,27 @@ body {
   font-weight: bolder;
   border: 0;
   border-radius: 12px;
-  background-color: black;
+  background: #015376; 
   color: white;
   padding: 4px;
   width: 100px;
   height: 40px;
 }
 
-.signup:hover {
+.signup:hover, .deleteButton:hover {
   transform: scale(1.1);
 }
 
-.signup:active {
+.signup:active, .deleteButton:active {
   transform: translateY(4px);
 }
 
-.books {
+.contBooks {
   display: flex;
+  flex-wrap: wrap;
   flex: 1;
+  gap: 24px;
+  padding: 24px;
 }
 
 .footer {
@@ -71,8 +78,10 @@ body {
   width: 100vw;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: #2d2d2d;
   gap: 5px;
+  position: absolute;
+  bottom: 0;
 }
 
 .hublogo {
@@ -85,10 +94,14 @@ body {
 
 .addBook {
   margin: 0 auto;
+  position: fixed;
+  z-index: 9;
+  left: 50%;
 }
 
 .plus {
   height: 75px;
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
 }
 
 .plus:hover {
@@ -101,24 +114,26 @@ body {
 
 .open-button {
   background: transparent;
-  position: fixed;
+  position: relative;
   border: 0;
   padding: 0;
 }
 
 .form-popup {
   display: none;
-  position: absolute;
-  left: 765px;
-  margin: 0 auto;
-  border: 3px solid #f1f1f1;
+  position: relative;
+  right: 40%;
+  z-index: 9;
+  background: linear-gradient(0.25turn, #7b0101, #2d2d2d, #015376); 
+  border-radius: 12px;
+  color: white;
+  opacity: 55;
 }
 
 /* Add styles to the form container */
 .form-container {
   width: 350px;
   padding: 10px;
-  background-color: white;
 }
 
 .form-container input[type=text] {
@@ -127,7 +142,8 @@ body {
   margin: 5px 0 22px 0;
   border: none;
   border-radius: 12px;
-  background: #f1f1f1;
+  background: linear-gradient(0.25turn, #015376, #2d2d2d, #7b0101); 
+  color: white;
 }
 
 .btn {
@@ -142,8 +158,8 @@ body {
 
 /* Set a style for the submit/login button */
 .form-container .btn {
-  background-color: rgb(53, 209, 141);
-  color: white;
+  background-color: white;
+  color: black;
   padding: 16px 20px;
   border: none;
   cursor: pointer;
@@ -153,7 +169,7 @@ body {
 }
 
 .form-container .cancel {
-  background-color: black;
+  background-color: #2d2d2d;
   color: white;
 }
 
@@ -161,66 +177,47 @@ body {
   opacity: 1;
 }
 
-.checkbox {
-  display: inline-block;
+.book {
+  height: 300px;
+  width: 276px;
+  font-size: 24px;
+  font-weight: 900;
+  text-align: center;
+  margin: 8px;
+  white-space: pre;
+  background: linear-gradient(0.25turn, #7b0101, #2d2d2d, #015376); 
+  color: white;
+  border-radius: 12px;
+  padding: 24px;
   position: relative;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
 
-.checkbox input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
+.book:hover {
+  box-shadow: 0 0 10px black;
+  transform: scale(1.1);
 }
 
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  bottom: 1px;
-  left: 120px;
-  height: 25px;
+.deleteButton {
+  background: url(../img/trash-can-outline.svg) no-repeat;
+  width: 50px;
+  height: 50px;
+  border: 0;
+  padding: 0;
+  appearance: none;
+  position: relative;
+  left: 70px;
+  top: 100px;
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+}
+
+.textBox {
+  cursor: pointer;
+}
+
+#textMark {
+  cursor: pointer;
   width: 25px;
-  background-color: #eee;
-  border-radius: 8px;
-}
-
-/* On mouse-over, add a grey background color */
-.checkbox:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.checkbox input:checked ~ .checkmark {
-  background-color: rgb(53, 209, 141) ;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.checkbox input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.checkbox .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+  height: 25px;
+  position: relative;
+  top: 3px;
 }
