--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,7 +180,7 @@ body {
 .book {
   height: 300px;
   width: 276px;
-  font-size: 24px;
+  font-size: 30px;
   font-weight: 900;
   text-align: center;
   margin: 8px;
@@ -205,13 +205,14 @@ body {
   padding: 0;
   appearance: none;
   position: relative;
-  left: 70px;
-  top: 100px;
+  left: 130px;
+  top: 20px;
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
 }
 
 .textBox {
   cursor: pointer;
+  display: block;
 }
 
 #textMark, #read {
